# AWE_SpellCorrect

./: .gitignore  MANIFEST.in  pyproject.toml  setup.cfg  setup.py
aggr_spellcorrect/: spellCorrect.py  spellcorrectServer.py
aggr_spellcorrect/setup/: data.py
awe_spellcorrect/: spellCorrect.py  spellcorrectServer.py
awe_spellcorrect/setup/: data.py
