[metadata]
name = awe_spellcorrect
version = 0.0.1
description = aggregating spell corrector
long_description = file: 
long_description_content_type = text/markdown
url = blank
author = Paul Douglas Deane, Educational Testing Service
author_email = pdeane@alliteration.net
license = agpl-3.0
keywords= nlp, error-correction
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Computational Linguists
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Intended Audience :: Other Audience
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Text Processing :: Linguistic
    Topic :: Text Processing :: Automated Writing Evaluation

[options]
include_package_data = True
packages = find:
python_requires >=3.9
install_requires =
  tensorflow==2.9
  websockets
  websocket-client
  aiohttp
  requests
  symspellpy
  autocorrect
  neuspell
  nltk
  pygtrie
  scipy
  clint
[options.package_data]
* = *.cfg, *.csv, *.json, *.txt

